<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/login_bg"
    android:gravity="center_horizontal"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/FoodieApp_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foodie_app"
        android:textSize="40sp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="80dp"
        android:textColor="@color/color_white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username_et"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/username"
        android:textSize="18sp"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/color_white"
        android:gravity="center"
        android:layout_marginBottom="40dp" />

    <EditText
        android:id="@+id/pwd_et"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/edittext_bg"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textSize="18sp"
        android:maxLines="1"
        android:textColorHint="@color/color_white"
        android:gravity="center"/>

    <TextView
        android:id="@+id/forgot_pwd_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/color_white"
        android:text="@string/forgot_pass"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/sign_in"
        android:textSize="18sp"
        android:background="@drawable/button_bg"
        android:layout_marginTop="40dp"
        android:textColor="@color/color_blue"/>

    <TextView
        android:id="@+id/sign_account_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:layout_marginTop="50dp"
        android:textSize="18sp"
        android:textColor="@color/color_white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_tv"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/color_white"
        android:text="@string/sign_up"/>



</LinearLayout>